Update function name mixin and reference. Bind annotation with function