@@ -2,40 +2,26 @@ package com.plugin.frege.linemarker.related;
 
 import com.intellij.icons.AllIcons;
 import com.intellij.psi.PsiElement;
-import com.intellij.psi.ResolveResult;
-import com.plugin.frege.psi.FregeFunctionName;
+import com.plugin.frege.psi.FregeAnnotationName;
 import com.plugin.frege.psi.impl.FregeFunctionNameImpl;
-import com.plugin.frege.psi.mixin.FregeFunctionNameMixin;
-import com.plugin.frege.resolve.FregeFunctionNameReference;
 import org.jetbrains.annotations.NotNull;
 
 import javax.swing.*;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class FregeFunctionBindingToAnnotationLineMarker extends FregeRelatedItemLineMarkerAbstract {
     @Override
     protected @NotNull List<@NotNull PsiElement> getTargets(@NotNull PsiElement element) {
         PsiElement parent = element.getParent();
-        if (!(parent instanceof FregeFunctionName)) {
-            return Collections.emptyList();
+        if (!(parent instanceof FregeFunctionNameImpl)) {
+            return List.of();
         }
         FregeFunctionNameImpl functionName = (FregeFunctionNameImpl) parent;
         if (!functionName.isFunctionBinding()) {
-            return Collections.emptyList();
+            return List.of();
         }
-        FregeFunctionNameReference functionNameReference = (FregeFunctionNameReference) functionName.getReference();
-        if (functionNameReference == null) {
-            return Collections.emptyList();
-        }
-        return Arrays.stream(functionNameReference.multiResolve(false))
-                .map(ResolveResult::getElement)
-                .filter(FregeFunctionNameImpl.class::isInstance)
-                .map(FregeFunctionNameImpl.class::cast)
-                .filter(FregeFunctionNameMixin::isFunctionAnnotation)
-                .collect(Collectors.toList());
+        FregeAnnotationName annotationName = functionName.getAnnotationName();
+        return annotationName != null ? List.of(annotationName) : List.of();
     }
 
     @Override
